--- a/src/app/components/pensamentos/criar-pensamento/criar-pensamento.component.html
+++ b/src/app/components/pensamentos/criar-pensamento/criar-pensamento.component.html
@@ -109,7 +109,7 @@
     </div>
     <div class="acoes">
       <button class="botao" (click)="criarPensamento()">Salvar</button>
-      <button class="botao" (click)="cancelar()">Cancelar</button>
+      <button class="botao" routerLink="/listar-pensamento">Cancelar</button>
     </div>
   </form>
 </section>
